overflow bugfix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
     font-family: Roboto;
     src: url('./fonts/Roboto/Roboto-Regular.ttf');
 }
+
+
 .canva-section a{
     text-decoration: none;
     
@@ -67,7 +69,6 @@ nav{
     white-space: nowrap;
     overflow:visible;
     text-overflow: ellipsis;
-    padding: 10px;
     margin-inline: auto;
 
 
@@ -215,6 +216,7 @@ nav{
  
     .mainimage , .image{
      margin-right:0em;
+     
     }
 
     .Text2{
@@ -229,9 +231,14 @@ nav{
       scale: 0.8;
 
     }
-    .image{
+    .image {
         scale: 0.6;
     }
+    
+    .mainimage{
+        scale: 0.9;
+    }
+    
  }
 
  @media screen and (width <= 700px){
@@ -253,5 +260,9 @@ nav{
 
     .panel {
         scale: 0.8;
+    }
+
+    .Text2{
+        margin: 0px;
     }
  }
